# bridge

./: .clang-format  .dockerignore  .env.example  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  bindings_config.yaml  bootstrap.ps1  bootstrap.sh  conanfile.txt  generate_registry.py  generated_bindings.cpp  test.py
cmake/: Dependencies.cmake  EnvLoader.cmake  mingw-toolchain.cmake
config/: .gitignore  registry_config.template.toml
include/: CustomTypeTraits.h  GeneratedRegistry.h  ParameterConverter.h  Registry.h  Registry.inl  ResultConverter.h  TypeRegistry.h  UnityBridge.h  pch.h  pch.hpp
include/codegen/: clang_analyzer.hpp  header_collector.hpp  header_includer.hpp  sol2_generator.hpp  sol_generator.hpp  yaml_reader.hpp
include/conversion/: oatpp_type_adapter.hpp
include/core/: Engine.h  Engine.hpp  Method.h  MethodDescriptor.h  Registration.h  TypeConverter.h
include/descriptor/: ClassDesc.hpp  FuncDesc.hpp  ParamDesc.hpp  TypeDesc.hpp
include/dto/: EngineDTO.hpp  ExecutionMode.hpp  ExecutionRequest.hpp  NetworkDTO.hpp  Pipeline.hpp  PipelineDTO.hpp  PipelineStep.hpp  RequestDTO.hpp  StepDTO.hpp
include/execution/: core_execution_result.hpp  execution_engine.hpp  execution_error.hpp  execution_error_type.hpp  execution_result.hpp  execution_service.hpp  execution_type.hpp  reserved_keywords.hpp
include/interop/: engine_export.hpp  interop_bridge.hpp  interop_bridge_exports.hpp  interop_c_api.hpp
include/mapper/: error_mapper.hpp  execution_result_mapper.hpp  metadata_mapper.hpp  options_mapper.hpp  request_mapper.hpp  response_mapper.hpp
include/metadata/: class_descriptor.hpp  constructor_descriptor.hpp  function_descriptor.hpp  parameter_descriptor.hpp  scope.hpp  variable_descriptor.hpp
include/model/: Class.h  Class.hpp  ClassDesc.hpp  FuncDesc.hpp  Method.h  Method.hpp  MethodDescriptor.h  MethodParameterDescriptor.h  ParamDesc.hpp  Parameter.h  Parameter.hpp  Type.h  TypeDesc.hpp
include/network/: HttpClient.hpp  NetworkManager.h  NetworkManager.hpp  execution_controller.hpp  json_serializer.hpp  network_component.hpp  oatpp_type_adapter.hpp  server_config.hpp  server_manager.hpp  server_state.hpp
include/operation/: BaseNode.h  ExecutionError.h  FunctionNode.h  GraphExecution.h  GraphExecutor.h  InvokableNode.h  MethodNode.h  NodeFactory.h  ObjectNode.h  ObjectPool.h  ObjectStore.h  Parameter.h  ParameterConverter.h  PersistentObjectStore.h  Result.h
include/pipeline/: CallStep.hpp  Command.hpp  ExecutionError.hpp  NewStep.hpp  ObjectPool.hpp  Pipeline.hpp  PipelineExecutor.hpp  PipelineManager.hpp  Step.hpp  StepFactory.hpp
include/reflection/: ClassRegistrar.hpp  MethodRegistrar.h  MethodRegistrar.hpp  ReflectionRegistry.h  ReflectionRegistry.hpp  TypeRegistrar.h  TypeRegistrar.hpp  class_descriptor.hpp  constructor_descriptor.hpp  data_member_descriptor.hpp  function_descriptor.hpp  member_function_descriptor.hpp  parameter_descriptor.hpp  variable_descriptor.hpp
include/registration/: ClassRegistrar.hpp  FunctionRegistrar.hpp  FunctionTraits.hpp  LuaRegistrar.hpp  RegistryTypes.hpp
include/serialization/: Converter.hpp  JsonRttrConverter.h  JsonSerializer.h  MethodJsonSerializer.h  MethodSerializer.h  MethodSerializer.hpp  PipelineSerializer.hpp  RttrConverter.h  RttrConverter.hpp  Serializer.hpp  json_serializer.hpp  oatpp_type_adapter.hpp
include/utils/: filesystem_utils.hpp  response_factory.hpp  string_utils.hpp  temp_file_guard.hpp
json_serialization/: CMakeLists.txt
scripts/codegen/: generate_registry.py  main.py  requirements.txt
src/: Globals.cpp  Registry.cpp  UnityBridge.cpp  main.cpp
src/bridge/: native_bridge.cpp
src/codegen/: clang_analyzer.cpp  header_collector.cpp  header_includer.cpp  sol2_generator.cpp  sol_generator.cpp  yaml_reader.cpp
src/conversion/: oatpp_type_adapter.cpp
src/core/: Engine.cpp  Method.cpp  MethodDescriptor.cpp  Registration.cpp  TypeConverter.cpp
src/execution/: execution_engine.cpp  execution_service.cpp
src/interop/: interop_bridge.cpp  interop_bridge_exports.cpp  interop_c_api.cpp
src/lua_bindings/: lua_registrar.cpp
src/model/: Class.cpp  Method.cpp  Parameter.cpp  Type.cpp
src/native/: native_bridge.cpp  native_bridge_exports.cpp
src/network/: NetworkManager.cpp  network_component.cpp  network_manager.cpp  oatpp_type_adapter.cpp  server_config.cpp  server_manager.cpp
src/operation/: BaseNode.cpp  ExecutionError.cpp  FunctionNode.cpp  GraphExecution.cpp  GraphExecutor.cpp  InvokableNode.cpp  MethodNode.cpp  NodeFactory.cpp  Result.cpp  (+6 more)
templates/: GeneratedRegistry.j2  reflection_registration_template.j2
tests/: concurrency_test.py  memory_stress_test.py  performance_test.py  run_benchmarks.ps1  run_benchmarks.sh  security_test.py  test_utils.py
tools/codegen/: CMakeLists.txt
tools/codegen/include/: clang_analyzer.hpp  engine.hpp  env_reader.hpp  header_collector.hpp  pch.hpp  sol2_generator.hpp  yaml_reader.hpp
tools/codegen/include/analysis/: analysis_data.hpp  ast_visitor.hpp  clang_analyzer.hpp  header_collector.hpp
tools/codegen/include/analysis/utils/: clang_utils.hpp
tools/codegen/include/generation/: sol2_generator.hpp
tools/codegen/include/io/: env_reader.hpp  header_collector.hpp  yaml_reader.hpp
tools/codegen/include/manual_registers/: manual_embedder.hpp  manual_node_array.hpp
tools/codegen/include/metadata/: class_descriptor.hpp  constructor_descriptor.hpp  enum_descriptor.hpp  enumerator_descriptor.hpp  function_descriptor.hpp  parameter_descriptor.hpp  scope.hpp  variable_descriptor.hpp
tools/codegen/include/wrappers/: graph_wrapper.hpp  io_wrapper.hpp  utils_wrapper.hpp
tools/codegen/src/: clang_analyzer.cpp  engine.cpp  env_reader.cpp  header_collector.cpp  main.cpp  sol2_generator.cpp  yaml_reader.cpp
tools/codegen/src/analysis/: ast_visitor.cpp  clang_analyzer.cpp  header_collector.cpp
tools/codegen/src/analysis/utils/: clang_utils.cpp
tools/codegen/src/generation/: sol2_generator.cpp
tools/codegen/src/io/: env_reader.cpp  header_collector.cpp  yaml_reader.cpp
(+152 files in other folders)
